# VHacdSharp

./: .gitignore  LICENSE  VHacdSharp.sln
Native/: build.bat  meson.build
Native/source/: callback.h  common.h  context.cpp  logger.h  main.cpp
Native/subprojects/v-hacd/: meson.build  meson_options.txt
VHacdSharp/: ComputeParameters.cs  ConvexDecomposition.cs  ConvexDecompositionOptions.cs  ConvexHull.cs  DecompositionMode.cs  TVector3.cs  VHacd.Handle.cs  VHacd.Interop.cs  VHacd.cs  VHacdSharp.csproj  Vector3D.cs
